--- a/.github/workflows/enqueue-to-eventbridge.yml
+++ b/.github/workflows/enqueue-to-eventbridge.yml
@@ -26,19 +26,48 @@ jobs:
           ISSUE_BODY: ${{ github.event.issue.body }}
           ISSUE_URL: ${{ github.event.issue.html_url }}
         run: |
-          # Parse the issue body to extract form data
-          # This is a simplified parser - in production you might want more robust parsing
-          AGENT=$(echo "$ISSUE_BODY" | grep -A1 "Assigned Agent" | tail -1 | xargs)
-          SPEC=$(echo "$ISSUE_BODY" | sed -n '/What should the agent do?/,/Deadline/p' | sed '1d;$d' | base64 -w0)
-          DEADLINE=$(echo "$ISSUE_BODY" | grep -A1 "Deadline" | tail -1 | xargs)
-          DEPS=$(echo "$ISSUE_BODY" | sed -n '/Dependencies/,$p' | sed '1d' | base64 -w0 || echo "")
+          # Parse the issue body to extract form data from GitHub issue template
+          # GitHub issue templates create specific patterns we can parse
+          
+          # Extract agent (looks for the dropdown selection)
+          AGENT=$(echo "$ISSUE_BODY" | grep -E "^\s*[A-Za-z]+\s*$" | head -1 | xargs || echo "")
+          
+          # Extract spec (everything between "What should the agent do?" and next section)
+          SPEC=$(echo "$ISSUE_BODY" | sed -n '/What should the agent do?/,/Deadline/p' | sed '1d;$d' | grep -v "^$" | base64 -w0 || echo "")
+          
+          # Extract deadline (looks for ISO date or "none")  
+          DEADLINE=$(echo "$ISSUE_BODY" | grep -E "(none|[0-9]{4}-[0-9]{2}-[0-9]{2})" | head -1 | xargs || echo "none")
+          
+          # Extract dependencies (everything after "Dependencies" section)
+          DEPS=$(echo "$ISSUE_BODY" | sed -n '/Dependencies/,$p' | sed '1d' | grep -v "^$" | base64 -w0 || echo "")
+          
+          # Debug output
+          echo "Parsed values:"
+          echo "  AGENT: '$AGENT'"
+          echo "  DEADLINE: '$DEADLINE'"
+          echo "  SPEC length: $(echo "$SPEC" | wc -c)"
+          echo "  DEPS length: $(echo "$DEPS" | wc -c)"
+          
+          # Validation - ensure we have required fields
+          if [ -z "$AGENT" ]; then
+            echo "❌ Error: Could not parse agent from issue body"
+            exit 1
+          fi
+          
+          if [ -z "$SPEC" ]; then
+            echo "❌ Error: Could not parse work specification from issue body"
+            exit 1
+          fi
           
           # Default deadline if none provided
           if [ -z "$DEADLINE" ] || [ "$DEADLINE" = "none" ]; then
             DEADLINE="none"
           fi
           
-          # Create EventBridge event
+          # Escape issue title for JSON
+          ESCAPED_TITLE=$(echo "$ISSUE_TITLE" | sed 's/"/\\"/g' | sed "s/'/\\'/g")
+          
+          # Create EventBridge event  
           cat > event.json << EOF
           {
             "Entries": [
@@ -53,10 +82,10 @@ jobs:
                   "agent": "$AGENT",
                   "payload": {
                     "spec": "$SPEC",
-                    "deadline": "$DEADLINE",
+                    "deadline": "$DEADLINE", 
                     "deps": "$DEPS",
                     "issueNumber": "$ISSUE_NUMBER",
-                    "issueTitle": "$ISSUE_TITLE",
+                    "issueTitle": "$ESCAPED_TITLE",
                     "issueUrl": "$ISSUE_URL"
                   }
                 }
