Fix EventBridge source pattern to match existing DevOps agent rules

--- a/.github/workflows/enqueue-to-eventbridge.yml
+++ b/.github/workflows/enqueue-to-eventbridge.yml
@@ -72,7 +72,7 @@ jobs:
           {
             "Entries": [
               {
-                "Source": "github.issues",
+                "Source": "agent.github",
                 "DetailType": "devops.request",
                 "Detail": {
                   "requestId": "issue-$ISSUE_NUMBER",
