--- a/.github/workflows/enqueue-to-eventbridge.yml
+++ b/.github/workflows/enqueue-to-eventbridge.yml
@@ -29,14 +29,14 @@ jobs:
           # Parse the issue body to extract form data from GitHub issue template
           # GitHub issue templates create specific patterns we can parse
           
-          # Extract agent (looks for the dropdown selection)
-          AGENT=$(echo "$ISSUE_BODY" | grep -E "^\s*[A-Za-z]+\s*$" | head -1 | xargs || echo "")
+          # Extract agent from table format: | **agent** | DevOpsAutomation |
+          AGENT=$(echo "$ISSUE_BODY" | grep -E "\*\*agent\*\*" | sed 's/.*|\s*\*\*agent\*\*\s*|\s*\([^|]*\)\s*|.*/\1/' | xargs || echo "")
           
           # Extract full issue body as spec (don't truncate)
           SPEC=$(printf "%s" "$ISSUE_BODY" | base64 -w0)
           
-          # Extract deadline (looks for ISO date or "none")  
-          DEADLINE=$(echo "$ISSUE_BODY" | grep -E "(none|[0-9]{4}-[0-9]{2}-[0-9]{2})" | head -1 | xargs || echo "none")
+          # Extract deadline from table format: | **deadline (UTC)** | 2025-06-28T00:00 |
+          DEADLINE=$(echo "$ISSUE_BODY" | grep -E "\*\*deadline.*\*\*" | sed 's/.*|\s*\*\*deadline[^|]*\*\*\s*|\s*\([^|]*\)\s*|.*/\1/' | xargs || echo "none")
           
           # Extract dependencies (everything after "Dependencies" section)
           DEPS=$(echo "$ISSUE_BODY" | sed -n '/Dependencies/,$p' | sed '1d' | grep -v "^$" | base64 -w0 || echo "")
